--- a/index.html
+++ b/index.html
@@ -1,14 +1,2 @@
 
-<h1>Welcome to AWS CODEDEPLOY with AUTOSCALING</h1>
-<br>
-Thank you for using AWS CODEDEPLOY with AUTOSCALING.
-<br>
-Autoscaling Testing
-
-
-<br>
-Success
-<br>
-AWS_CODE_DEPLOY - DONE  - Final Test
-<br>
-Plus
+hello world
